# Per-Axis-Weight-Deltas-for-Frequent-Model-Updates

./: .gitignore  README.md  note.ipynb  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: run_choose_compress.py  run_pipeline.py
src/bitdelta_pipeline/: args.py  binary_variants.py  choose_compress.py  compress.py  data.py  eval_utils.py  io_capture.py  models.py  pipeline.py  save_load_delta.py  train.py  weights.py
tests/: test_choose_import.py  test_smoke.py
