[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitdelta-pipeline"
version = "0.1.0"
description = "Structured pipeline for BitDelta compression and evaluation"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["bitdelta_pipeline"]
